# AppMarketDemo

./: gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/jni/: Android.mk  Application.mk  bspatch.c  com_example_renzhenming_appmarket_utils_PatchUtils.h  compress_image.cpp  compress_image.h
app/src/androidTest/java/com/example/renzhenming/appmarket/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bsdiff.c  bspatch.c  compress_image.cpp  queue.c  queue.h  video_player.c
app/src/main/cpp/bspatch/: decompress.c
app/src/main/cpp/head/: com_app_rzm_utils_BsUpdateUtils.h  com_app_rzm_utils_FFmpegUtils.h  com_app_rzm_utils_PatchUtils.h
app/src/main/java/com/app/rzm/: MyApplication.java  TestActivity.java  TestBsPatchActivity.java  TestBsdiffActivity.java  TestChatViewActivity.java  TestCommonAdapter.java  TestCommonIndicatorAdapter.java  TestCommonIndicatorPagerAdapter.java  TestCompressImageActivity.java  TestCoordinatorCollapsingToolbarActivity.java  TestCustomRecyclerViewActivity.java  TestHookActivity.java  TestHookActivity_Registered.java  TestImageActivity.java  TestItemDecorationActivity.java  TestObservableActivity.java  TestPasswordKeyboardActivity.java  TestProxyActivity.java  TestSkinActivity.java  TextCommonIndicatorActivity.java  TextObserverClass.java
app/src/main/java/com/app/rzm/adapter/: DiscoverListAdapter.java
app/src/main/java/com/app/rzm/bean/: DiscoverListResult.java  Person.java
app/src/main/java/com/app/rzm/service/: GuardService1.java  GuardService2.java  JobWakeUpService.java
app/src/main/java/com/app/rzm/test/: MessageService.java  TestActivity.java  TestAlphabetViewActivity.java  TestBsPatchActivity.java  TestChatViewActivity.java  TestCommonAdapter.java  TestCommonDialogActivity.java  TestCommonIndicatorAdapter.java  TestCommonIndicatorPagerAdapter.java  TestCommonNavigationBarActivity.java  TestCompressImageActivity.java  TestCoordinatorCollapsingToolbarActivity.java  TestCustomRecyclerViewActivity.java  TestDaoSupportActivity.java  TestFFmpegActivity.java  TestFixDexActivity.java  TestHookActivity.java  TestHookActivity_Registered.java  TestHttpUtilsActivity.java  TestIOCViewBindActivity.java  TestItemDecorationActivity.java  TestMyRecyclerViewActivity.java  TestObservableActivity.java  TestPasswordKeyboardActivity.java  TestPermissionHelperActivity.java  TestProxyActivity.java  TestSkinActivity.java  TestSlidingViewActivity.java  TextCommonIndicatorActivity.java  TextCustomeViewActivity.java  TextObserverClass.java
app/src/main/java/com/app/rzm/ui/: HomeActivity.java  WelcomeActivity.java
app/src/main/java/com/app/rzm/utils/: BsUpdateUtils.java  FFmpegUtils.java  FileUtils.java  GlideImageLoader.java  IOUtils.java  ImageUtil.java  PatchUtils.java  StringUtils.java  TestCommonIndicatorAdapter.java  UIUtils.java  VideoView.java
app/src/main/java/com/example/renzhenming/appmarket/: MainActivity.java  MyApplication.java  TestActivity.java  TestCommonAdapter.java  TestCoordinatorCollapsingToolbarActivity.java  (+9 more)
app/src/main/jni/: CMakeLists.txt  compress_image.cpp  compress_image.h  jni_lib.cpp  jni_lib.h
app/src/main/jni/jpeg/: jpeglib.h
app/src/main/res/color/: login_text_color_pressed.xml  selector_center_fans_follow_text.xml  selector_clear_history_testcolor.xml  selector_text_enable.xml  sheet_item_text_color_pressed.xml  textview_pressable.xml  textview_pressed.xml
app/src/main/res/drawable/: bg_subscribe_btn.xml  detail_btn.xml  layer_list_ratingbar_bg.xml  shape_sheet_item_pressed.xml
app/src/main/res/layout/: activity_choose_video.xml  activity_home.xml  activity_hook_test.xml  activity_main.xml  activity_test.xml  activity_test_alphabet_view.xml  activity_test_bs_patch.xml  activity_test_bsdiff.xml  activity_test_chat_view.xml  activity_test_common_dialog.xml  activity_test_common_navigation_bar.xml  activity_test_compress_image.xml  activity_test_coordinator_collapsing_toolbar.xml  activity_test_custom_recycler_view.xml  activity_test_dao_support.xml  activity_test_ffmpeg.xml  activity_test_fix_dex.xml  activity_test_hook__registered.xml  activity_test_http_utils.xml  activity_test_image.xml  activity_test_iocview_bind.xml  activity_test_item_decoration.xml  activity_test_jni.xml  activity_test_my_recyler_view.xml  activity_test_observable.xml  activity_test_password_keyboard.xml  activity_test_permission_helper.xml  activity_test_proxy.xml  activity_test_skin.xml  activity_test_sliding_view.xml  activity_text_common_indicator.xml  activity_text_custormer_view.xml  activity_video_edit.xml  activity_video_preview.xml  activity_welcome.xml  dialog_one_button.xml  fragment_find.xml  fragment_home.xml  fragment_main.xml  fragment_message.xml  (+21 more)
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
(+707 files in other folders)
